--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Assigment</title>
     <script defer src="./main.js"></script>
+    <script defer src="./script.js"></script>
 </head>
 <body>
     
