--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script defer src="./script.js"></script>
 </head>
 <body>
-    
+    <a href="./number-guessing-game/index.html">Number guessing Game</a>
+    <br>
+    <a href="./rock-paper-scissors/index.html">Rock Paper Scissors Game</a>
 </body>
 </html>
